<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="monospace_font"
        android:title="@string/monospace_font"
        android:summary="@string/monospace_font_summary" />

    <EditTextPreference
        android:key="font_size"
        android:title="@string/font_size"
        android:inputType="number" />

    <EditTextPreference
        android:key="line_spacing"
        android:title="@string/line_spacing"
        android:summary="@string/line_spacing_summary"
        android:inputType="number" />

    <Preference
        android:key="backup_bookmarks"
        android:title="Backup Bookmarks"
        android:summary="Save all of your bookmarks in a transferable file."/>

    <Preference
        android:key="restore_bookmarks"
        android:title="Restore Bookmarks"
        android:summary="Restore backed up bookmarks from a file."/>

</PreferenceScreen>