<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/addBookmarkButton"
        android:enabled="true"
        android:icon="@drawable/ic_bookmark_border_white"
        android:title="@string/add_bookmark"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/downloadButton"
        android:enabled="true"
        android:icon="@drawable/ic_file_download_white"
        android:title="@string/download"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/refresh"
        android:enabled="true"
        android:icon="@drawable/ic_refresh_white"
        android:title="@string/refresh"
        android:visible="true"
        app:showAsAction="always" />


    <item
        android:id="@+id/link"
        android:enabled="true"
        android:icon="@drawable/ic_link_white"
        android:title="@string/edit_link"
        android:visible="true"
        app:showAsAction="ifRoom" />


    <item
        android:id="@+id/history"
        android:enabled="true"
        android:icon="@drawable/ic_history_white"
        android:title="@string/history"
        android:visible="true"
        app:showAsAction="ifRoom" />

</menu>