<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/link"
        android:enabled="true"
        android:icon="@drawable/ic_link_white"
        android:title="@string/link"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/history"
        android:enabled="true"
        android:icon="@drawable/ic_history_white"
        android:title="@string/history"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/options_menu"
        android:enabled="true"
        android:title="@string/options"
        android:visible="true"
        app:showAsAction="never" />
</menu>